@@ -6,6 +6,7 @@ Stable versions
 	- fix note cut on invalid sample in IT sample mode
 	- fix note end detection in IT sample mode
 	- fix IT envelope handling with carry and fadeout
+	- fix IT tone portamento with sample changes
 
 4.3.6 (20150322):
 	Fix bugs caught in the OpenMPT test cases:
